--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.8.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.10.3</version>
+		</dependency>
 	</dependencies>
+	
 </project>
